# RTEgetData-LinuxCompat

./: .gitignore  BUILD.md  CHANGELOG.md  CICD.md  CMakeLists.txt  GUI_README.md  History.md  RELEASE.md  Readme.md  ToDo.md  build-mingw.bat  build.bat  build.sh  imgui.ini  test-ci.md
.github/: RELEASE_PROCESS.md
.github/workflows/: build-release.yml  check.yml  debug-build.yml  debug-simple.yml  manual-release.yml  minimal.yml  msbuild_release.yml  release.yml  simple-release.yml  test-build.yml  test-minimal.yml  validate-workflows.yml
Code/: RTEgetData.cpp  RTEgetData.h  RTEgetData.sln  RTEgetData.vcxproj  RTEgetData.vcxproj.filters  RTEgetData_GUI.cpp  RTEgetData_GUI.h  RTEgetData_GUI_main.cpp  bridge.cpp  bridge.h  cmd_line.cpp  cmd_line.h  com_lib.cpp  com_lib.h  gdb_defs.h  gdb_lib.cpp  gdb_lib.h  logger.cpp  logger.h  platform_compat.cpp  platform_compat.h  rte_com.h
TEST/: Readme.md
TEST/J-Link/: ReadData-J-LINK.bat
TEST/OpenOCD-ST-LINK/: ReadData-OpenOCD-cmd.bat  ReadData-OpenOCD.bat
TEST/ST-LINK/: ReadData-ST-LINK.bat
